--- a/scrollviewdemo/scrollviewdemo/Base.lproj/Main.storyboard
+++ b/scrollviewdemo/scrollviewdemo/Base.lproj/Main.storyboard
@@ -18,58 +18,78 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tta-yB-Hem">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tta-yB-Hem">
                                 <rect key="frame" x="100" y="120" width="214" height="516"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ur7-wn-ebf">
-                                        <rect key="frame" x="0.0" y="20" width="1072" height="736"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Re8-BY-S5Z" userLabel="Contenview">
+                                        <rect key="frame" x="0.0" y="0.0" width="214" height="800"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3et-ja-wc1">
-                                                <rect key="frame" x="8" y="296" width="240" height="128"/>
-                                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lcf-Xn-GKc">
+                                                <rect key="frame" x="0.0" y="400" width="214" height="0.0"/>
+                                                <color key="backgroundColor" red="1" green="0.2706859284" blue="0.12860444009999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="240" id="67g-c5-ZkB"/>
-                                                    <constraint firstAttribute="height" constant="128" id="XDw-48-JZD"/>
+                                                    <constraint firstAttribute="width" constant="214" id="csD-7L-4x5"/>
                                                 </constraints>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Mg-7Q-EvE">
-                                                <rect key="frame" x="264" y="296" width="800" height="128"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tr9-rq-GaN">
+                                                <rect key="frame" x="0.0" y="0.0" width="214" height="400"/>
+                                                <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="800" id="GjR-46-pZv"/>
-                                                    <constraint firstAttribute="height" constant="128" id="mjW-1R-yDQ"/>
+                                                    <constraint firstAttribute="height" constant="400" id="Dax-cv-i9U"/>
+                                                    <constraint firstAttribute="width" constant="214" id="nRg-Q7-hvX"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
-                                        <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" red="1" green="0.43112215209999999" blue="0.1172442049" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
-                                            <constraint firstItem="3et-ja-wc1" firstAttribute="top" secondItem="ur7-wn-ebf" secondAttribute="top" constant="296" id="3Mb-Fa-pQb"/>
-                                            <constraint firstItem="6Mg-7Q-EvE" firstAttribute="leading" secondItem="3et-ja-wc1" secondAttribute="trailing" constant="16" id="Cvi-gU-pah"/>
-                                            <constraint firstItem="3et-ja-wc1" firstAttribute="leading" secondItem="ur7-wn-ebf" secondAttribute="leading" constant="8" id="IU9-hK-FJW"/>
-                                            <constraint firstItem="6Mg-7Q-EvE" firstAttribute="top" secondItem="ur7-wn-ebf" secondAttribute="top" constant="296" id="QVj-d8-3Mo"/>
-                                            <constraint firstAttribute="trailing" secondItem="6Mg-7Q-EvE" secondAttribute="trailing" constant="8" id="Xkk-uF-HJA"/>
+                                            <constraint firstAttribute="trailing" secondItem="tr9-rq-GaN" secondAttribute="trailing" id="PgM-G2-Fzp"/>
+                                            <constraint firstAttribute="width" constant="214" id="UtW-fp-gHx"/>
+                                            <constraint firstAttribute="trailing" secondItem="lcf-Xn-GKc" secondAttribute="trailing" id="bHz-jR-HNc"/>
+                                            <constraint firstAttribute="bottom" secondItem="lcf-Xn-GKc" secondAttribute="bottom" constant="400" id="eIq-2L-Q8u"/>
+                                            <constraint firstItem="lcf-Xn-GKc" firstAttribute="leading" secondItem="Re8-BY-S5Z" secondAttribute="leading" id="kHk-TK-flb"/>
+                                            <constraint firstItem="tr9-rq-GaN" firstAttribute="leading" secondItem="Re8-BY-S5Z" secondAttribute="leading" id="qJB-Cc-E02"/>
+                                            <constraint firstAttribute="height" priority="250" constant="516" id="skS-D2-Lei"/>
+                                            <constraint firstItem="tr9-rq-GaN" firstAttribute="top" secondItem="Re8-BY-S5Z" secondAttribute="top" id="vKk-bl-p1I"/>
+                                            <constraint firstItem="lcf-Xn-GKc" firstAttribute="top" secondItem="tr9-rq-GaN" secondAttribute="bottom" id="vlT-ER-zBw"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="ur7-wn-ebf" secondAttribute="trailing" id="MKW-4s-fZb"/>
-                                    <constraint firstAttribute="bottom" secondItem="ur7-wn-ebf" secondAttribute="bottom" id="TOC-dS-oOE"/>
-                                    <constraint firstItem="ur7-wn-ebf" firstAttribute="leading" secondItem="tta-yB-Hem" secondAttribute="leading" id="Z46-OR-oM8"/>
-                                    <constraint firstItem="ur7-wn-ebf" firstAttribute="top" secondItem="tta-yB-Hem" secondAttribute="top" constant="20" id="qvp-Hd-b08"/>
+                                    <constraint firstAttribute="bottom" secondItem="Re8-BY-S5Z" secondAttribute="bottom" id="AjA-IM-4Sa"/>
+                                    <constraint firstItem="Re8-BY-S5Z" firstAttribute="leading" secondItem="tta-yB-Hem" secondAttribute="leading" priority="250" id="GQm-EY-aYa"/>
+                                    <constraint firstAttribute="trailing" secondItem="Re8-BY-S5Z" secondAttribute="trailing" id="aqE-oE-Tro"/>
+                                    <constraint firstItem="Re8-BY-S5Z" firstAttribute="top" secondItem="tta-yB-Hem" secondAttribute="top" id="lYI-Io-NlP"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="RWQ-Fe-A9t"/>
+                                </connections>
                             </scrollView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bsE-pc-EfZ">
+                                <rect key="frame" x="0.0" y="676" width="414" height="60"/>
+                                <color key="backgroundColor" red="0.6539106346828607" green="1" blue="0.40323023450654949" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="399-pv-H93"/>
+                                    <constraint firstAttribute="width" constant="414" id="H8Y-ty-jIM"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="ur7-wn-ebf" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="3Uo-Ff-R9N"/>
+                            <constraint firstItem="bsE-pc-EfZ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="1fZ-Wz-llU"/>
+                            <constraint firstItem="bsE-pc-EfZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="22B-gi-KpZ"/>
                             <constraint firstItem="tta-yB-Hem" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="4Fe-DY-QIJ"/>
+                            <constraint firstItem="bsE-pc-EfZ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Arl-Kn-CdO"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tta-yB-Hem" secondAttribute="trailing" constant="100" id="B8W-Xq-kZt"/>
-                            <constraint firstItem="ur7-wn-ebf" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" priority="250" id="BTG-se-zfr"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="tta-yB-Hem" secondAttribute="bottom" constant="100" id="GsH-mf-1LR"/>
                             <constraint firstItem="tta-yB-Hem" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="HNM-I8-Pbg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="ScrV" destination="tta-yB-Hem" id="qZl-KB-Ubm"/>
+                        <outlet property="VIewAnimation" destination="bsE-pc-EfZ" id="L3e-cj-QlZ"/>
+                        <outlet property="constraintHeight" destination="399-pv-H93" id="Cok-1c-x1t"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
